# namigator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Common.hpp  LICENSE  README.md  _clang-format  dump_cmangos_gos.bat  maps.sln  pyproject.toml
MapBuilder/: BVHConstructor.cpp  BVHConstructor.hpp  CMakeLists.txt  FileExist.cpp  FileExist.hpp  GameObjectBVHBuilder.cpp  GameObjectBVHBuilder.hpp  MapBuilder.vcxproj  MapBuilder.vcxproj.filters  MapBuilder_c_bindings.cpp  MeshBuilder.cpp  MeshBuilder.hpp  RecastContext.cpp  RecastContext.hpp  Worker.cpp  Worker.hpp  main.cpp  mapbuilder_c_bindings.h  python.cpp
MapBuilder/Include/: DBC.hpp  GameObjectBVHBuilder.hpp  MeshBuilder.hpp  Worker.hpp
MapBuilder/Source/: DBC.cpp  GameObjectBVHBuilder.cpp  MeshBuilder.cpp  Worker.cpp  main.cpp  python.cpp
MapViewer/: CMakeLists.txt  Camera.cpp  Camera.hpp  CommonControl.cpp  CommonControl.hpp  DetourDebugDraw.cpp  DetourDebugDraw.hpp  MapViewer.rc  MapViewer.vcxproj  MapViewer.vcxproj.filters  Renderer.cpp  Renderer.hpp  SphereMesh.hpp  main.cpp  pixelShader.hlsl  resource.h  vertexShader.hlsl
MapViewer/Include/: Camera.hpp  DetourDebugDraw.hpp  Renderer.hpp  SphereMesh.hpp
MapViewer/Source/: Camera.cpp  DetourDebugDraw.cpp  MapViewer.rc  Renderer.cpp  main.cpp  vertexShader.hlsl
RecastDetourBuild/: CMakeLists.txt  Common.hpp  RecastDetourBuild.vcxproj  RecastDetourBuild.vcxproj.filters
RecastDetourBuild/Include/: Common.hpp  TileCacheCompressor.hpp
RecastDetourBuild/Recast/: Recast.vcxproj  Recast.vcxproj.filters
parser/: CMakeLists.txt  DBC.cpp  DBC.hpp  MpqManager.cpp  MpqManager.hpp  parser.vcxproj  parser.vcxproj.filters
parser/Adt/: Adt.cpp  Adt.hpp  AdtChunk.cpp  AdtChunk.hpp  AdtChunkLocation.hpp
parser/Adt/Chunks/: MCNK.cpp  MCNK.hpp  MDDF.cpp  MDDF.hpp  MH2O.cpp  MH2O.hpp  MHDR.cpp  MHDR.hpp  MMDX.cpp  MMDX.hpp  MODF.cpp  MODF.hpp  MWMO.cpp  MWMO.hpp
parser/Adt/Chunks/Subchunks/: MCLQ.cpp  MCLQ.hpp  MCVT.cpp  MCVT.hpp
parser/Doodad/: Doodad.cpp  Doodad.hpp  DoodadInstance.cpp  DoodadInstance.hpp  DoodadPlacement.hpp
parser/Include/: MpqManager.hpp  parser.hpp
parser/Include/Adt/: Adt.hpp  AdtChunk.hpp
parser/Include/Adt/Chunks/: MCNK.hpp  MDDF.hpp  MH2O.hpp  MHDR.hpp  MMDX.hpp  MODF.hpp  MWMO.hpp
parser/Include/Adt/Chunks/Subchunks/: MCLQ.hpp  MCNR.hpp  MCVT.hpp
parser/Include/Doodad/: Doodad.hpp  DoodadInstance.hpp  DoodadPlacement.hpp
parser/Include/Input/: WowFile.hpp
parser/Include/Input/Adt/: AdtChunk.hpp  AdtFile.hpp
parser/Include/Input/Adt/Chunks/: MCNK.hpp  MDDF.hpp  MH2O.hpp  MHDR.hpp  MMDX.hpp  MODF.hpp  MWMO.hpp
parser/Include/Input/M2/: DoodadFile.hpp
parser/Include/Input/Mpq/: MpqFileReader.hpp
parser/Include/Input/Wdt/: WdtFile.hpp
parser/Include/Input/Wmo/: WmoChunkHeader.hpp  WmoDoodad.hpp  WmoParserInfo.hpp
parser/Include/Input/Wmo/Group File/: WmoGroupChunk.hpp  WmoGroupFile.hpp
parser/Include/Input/Wmo/Root File/: WmoRootChunk.hpp  WmoRootFile.hpp
parser/Include/Map/: Map.hpp
parser/Include/Output/: Adt.hpp  Continent.hpp  Doodad.hpp  MpqManager.hpp  Wmo.hpp
parser/Include/Wmo/: Wmo.hpp  WmoChunkHeader.hpp  WmoDoodad.hpp  WmoDoodadPlacement.hpp  WmoInstance.hpp  WmoPlacement.hpp
parser/Include/Wmo/Group File/: WmoGroupFile.hpp
parser/Include/Wmo/Group File/Chunks/: MLIQ.hpp  MOPY.hpp  MOVI.hpp  MOVT.hpp
parser/Include/Wmo/GroupFile/: WmoGroupChunk.hpp
parser/Include/Wmo/GroupFile/Chunks/: MLIQ.hpp  MOPY.hpp  (+1 more)
parser/Include/Wmo/Root File/: WmoRootChunk.hpp
parser/Map/: Map.cpp  Map.hpp
parser/Source/: DBC.cpp  MpqManager.cpp  parser.cpp
parser/Source/Adt/: Adt.cpp  AdtChunk.cpp
parser/Source/Adt/Chunks/: MCNK.cpp  MDDF.cpp  MH2O.cpp  MHDR.cpp  MMDX.cpp  MODF.cpp  MWMO.cpp
parser/Source/Doodad/: Doodad.cpp  DoodadInstance.cpp
parser/Source/Input/: WowFile.cpp
parser/Source/Input/Adt/: AdtChunk.cpp  AdtFile.cpp
parser/Source/Input/M2/: DoodadFile.cpp
parser/Source/Input/Wdt/: WdtFile.cpp
parser/Source/Input/Wmo/: WmoDoodad.cpp
parser/Source/Map/: Map.cpp
parser/Source/Output/: Adt.cpp  Continent.cpp  Doodad.cpp  MpqManager.cpp  Wmo.cpp
parser/Source/Wmo/: Wmo.cpp  WmoDoodad.cpp  WmoInstance.cpp
parser/Source/Wmo/Group File/: WmoGroupChunk.cpp  WmoGroupFile.cpp
parser/Source/Wmo/GroupFile/: WmoGroupFile.cpp
parser/Wmo/: Wmo.cpp  Wmo.hpp  WmoChunkHeader.hpp  WmoDoodad.cpp  WmoDoodad.hpp  WmoDoodadPlacement.hpp  WmoInstance.cpp  WmoInstance.hpp  WmoPlacement.hpp
parser/Wmo/GroupFile/: WmoGroupChunk.cpp  WmoGroupChunk.hpp  WmoGroupFile.cpp  WmoGroupFile.hpp
parser/Wmo/GroupFile/Chunks/: MLIQ.cpp  MLIQ.hpp  MOPY.cpp  MOPY.hpp  MOVI.cpp  MOVI.hpp  MOVT.cpp  MOVT.hpp
parser/Wmo/RootFile/: WmoRootChunk.hpp
parser/Wmo/RootFile/Chunks/: MODD.cpp  MODD.hpp  MODN.cpp  MODN.hpp  MODS.cpp  MODS.hpp  MOHD.hpp
pathfind/: BVH.cpp  BVH.hpp  CMakeLists.txt  Map.cpp  Map.hpp  Model.hpp  TemporaryObstacle.cpp  Tile.cpp  Tile.hpp  pathfind.vcxproj  pathfind.vcxproj.filters  pathfind_c_bindings.cpp  pathfind_c_bindings.hpp  python.cpp
pathfind/Include/: AreaFlags.hpp  Common.hpp  DataManager.hpp  Map.hpp  MeshBuilder.hpp  Model.hpp  NavMesh.hpp  Tile.hpp
pathfind/Source/: DataManager.cpp  Map.cpp  MeshBuilder.cpp  NavMesh.cpp  TemporaryObstacle.cpp  Tile.cpp
test/: CMakeLists.txt  all_tests.py  manual_tests.py  pathfind_memory_test.cpp  smoke_tests.py  time_build.py  time_load_azeroth.py
utility/: AABBTree.cpp  AABBTree.hpp  Array2d.hpp  BinaryStream.cpp  BinaryStream.hpp  BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  Exception.hpp  MathHelper.cpp  MathHelper.hpp  Matrix.cpp  Matrix.hpp  Quaternion.cpp  Quaternion.hpp  Ray.cpp  Ray.hpp  String.cpp  String.hpp  Vector.cpp  Vector.hpp  utility.vcxproj  utility.vcxproj.filters
utility/Include/: AABBTree.hpp  Array2d.hpp  BinaryStream.hpp  BoundingBox.hpp  Cache.hpp  Directory.hpp  Exception.hpp  LinearAlgebra.hpp  Log.hpp  MathHelper.hpp  Misc.hpp  Ray.hpp
utility/Source/: AABBTree.cpp  BinaryStream.cpp  BoundingBox.cpp  Directory.cpp  LinearAlgebra.cpp  Log.cpp  MathHelper.cpp  Ray.cpp  TriangleCollection.cpp
(+59 files in other folders)
